--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/node": "^18.7.14",
     "@types/react": "^17.0.0",
+    "@types/styled-components": "^5.1.26",
     "next": "^12.2.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.7.0"
   },
   "scripts": {
