--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "styled-components": "^5.3.5",
-    "typescript": "^4.7.0"
+    "swr": "^1.3.0",
+    "typescript": "^4.7.0",
+    "vcc-ui": "^3.3.0"
   },
   "scripts": {
     "dev": "next dev",
