--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "next": "^12.2.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-swipeable": "^7.0.0",
     "styled-components": "^5.3.5",
     "swr": "^1.3.0",
     "typescript": "^4.7.0",
